# triolet

./: .gitignore  Game.hs  LICENSE  Main.hs  README.md  Spec.hs  Utils.hs  package.yaml  triolet.cabal
src/: Eval.hs  Game.hs  Utils.hs
test/: Spec.hs
