name:                triolet
version:             0.1.0.0
synopsis:            Haskell implementation of the board game "Triolet".

license:             MIT
license-file:        LICENSE
author:              Yoann Blein
maintainer:          yoann.blein@free.fr
category:            Game

build-type:          Simple
cabal-version:       >=1.10

executable triolet
  main-is:             Main.hs
  other-modules:       Game, Utils
  build-depends:       base >=4.9 && <4.10, gtk3 >=0.14 && <0.15, cairo >=0.13 && <0.14, mtl >=2.2 && <2.3, random >=1.1 && <1.2, containers >=0.5 && <0.6, random-shuffle >=0.0 && <0.1, MonadRandom >=0.4 && <0.5, cmdargs >=0.10 && <0.11, unordered-containers >=0.2 && <0.3
  default-language:    Haskell2010
