name:                triolet
version:             0.1.0.0
synopsis:            Haskell implementation of the board game "Triolet".

license:             MIT
license-file:        LICENSE
author:              Yoann Blein
maintainer:          yoann.blein@free.fr
category:            Game

build-type:          Simple
cabal-version:       >=1.10

executable triolet
  main-is:             Main.hs
  other-modules:       Game, Utils
  build-depends:       base >=4.9 && <5, mtl, random, containers, random-shuffle, MonadRandom, unordered-containers, cmdargs, gtk3, cairo
  default-language:    Haskell2010

test-suite test-triolet
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Game, Utils
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <5, mtl, random, containers, random-shuffle, MonadRandom, unordered-containers, hspec
